--- a/app/src/main/res/layout/wallet_activity_idhub_svip.xml
+++ b/app/src/main/res/layout/wallet_activity_idhub_svip.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".me.information.Level2Activity">
+    tools:context=".me.information.IDHubSVIPActivity">
 
     <TextView
         android:id="@+id/tv_idhub_vip"
