--- a/app/src/main/res/layout/wallet_activity_qr_code.xml
+++ b/app/src/main/res/layout/wallet_activity_qr_code.xml
@@ -61,7 +61,7 @@
         android:layout_width="38dp"
         android:layout_height="41dp"
         android:layout_marginBottom="150dp"
-        android:background="@drawable/icon_light"
+        android:background="@drawable/wallet_icon_light"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent" />
