--- a/app/src/main/res/values-en/wallet_strings.xml
+++ b/app/src/main/res/values-en/wallet_strings.xml
@@ -34,6 +34,8 @@
     <string name="wallet_me">My Profile</string>
     <string name="wallet_wallet">Wallet</string>
     <string name="wallet_dapp">Dapp</string>
+    <string name="wallet_home">Home</string>
+    <string name="wallet_dex">Dex</string>
     <string name="wallet_history">History</string>
     <string name="wallet_setting">Setting</string>
     <string name="wallet_identity_create">Create Identity</string>
@@ -418,4 +420,10 @@
     <string name="wallet_auto">Auto</string>
     <string name="wallet_chinese">简体中文</string>
     <string name="wallet_english">English</string>
+
+    <string name="wallet_home_search">Search...</string>
+    <string name="wallet_home_claim">CLAIM</string>
+    <string name="wallet_home_hot">HOT</string>
+
+
 </resources>
