--- a/app/src/main/res/layout/wallet_fragment_hot.xml
+++ b/app/src/main/res/layout/wallet_fragment_hot.xml
@@ -8,6 +8,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
