--- a/app/src/main/res/values/wallet_strings.xml
+++ b/app/src/main/res/values/wallet_strings.xml
@@ -400,5 +400,7 @@
     <string name="wallet_home_claim">凭证</string>
     <string name="wallet_home_hot">热点</string>
     <string name="wallet_upload_identity_information">上传身份信息</string>
-
+    <string name="wallet_securities">Securities</string>
+    <string name="wallet_token">Token</string>
+    <string name="wallet_collectibles">Collectibles</string>
 </resources>
