--- a/app/src/main/res/layout/wallet_common_title_layout.xml
+++ b/app/src/main/res/layout/wallet_common_title_layout.xml
@@ -11,8 +11,6 @@
         android:id="@+id/back_icon"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
         android:src="@mipmap/wallet_back_black_icon"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -27,7 +25,7 @@
         android:layout_marginRight="20dp"
         android:singleLine="true"
         android:gravity="center"
-        android:textColor="@color/wallet_text_black"
+        android:textColor="@color/wallet_black"
         android:textSize="18dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
