--- a/app/src/main/res/layout/wallet_fragment_stassets.xml
+++ b/app/src/main/res/layout/wallet_fragment_stassets.xml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@color/wallet_main_yellow_color"
     android:layout_height="match_parent"
     tools:context=".assets.fragment.STAssetsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="STAssets" />
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
